--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: activityservice
+    name: activity-service
   data:
     mongodb:
       uri: mongodb+srv://dineshpandey3536:3HYP52HzgpXSk1b5@cluster0.ktglbgt.mongodb.net/microservices_activities
@@ -8,3 +8,8 @@ spring:
 
 server:
   port: 8082
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
