--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://dineshpandey3536:3HYP52HzgpXSk1b5@cluster0.ktglbgt.mongodb.net/microservices_activities
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 
 server:
@@ -13,3 +18,12 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+rabbitmq:
+  exchange:
+    name: fitness.exchange
+  queue:
+    name: activity.queue
+  routing:
+    key: activity.tracking
+
