--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -69,6 +69,12 @@
 			<version>9.37.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-resolver-dns-native-macos</artifactId>
+			<classifier>osx-aarch_64</classifier>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
