--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: api-gateway
   config:
     import: optional:configserver:http://localhost:8888
+
+# JVM arguments to suppress native access warnings
+jvm:
+  args: --enable-native-access=ALL-UNNAMED
