--- a/fitness-app-frontend/package.json
+++ b/fitness-app-frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-oauth2-code-pkce": "^1.23.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0"
   },
